--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,9 @@
     "type": "project",
     "require": {
         "php": "7.2.*",
-        "laravel/framework": "5.6.*",
+        "laravel/framework": "5.7.*",
         "laravel/horizon": "^1.2",
+        "laravel/telescope": "^1.0",
         "laravel/tinker": "~1.0",
         "salsify/json-streaming-parser": "6.0.3"
     },
